--- a/_posts/2021-10-28-论文.md
+++ b/_posts/2021-10-28-论文.md
@@ -26,5 +26,25 @@ tags: Papers
 [^-^]:
     需要看一看这篇论文引用的攻击方法是什么？cites:[5-6]
 
-大多数现有的对抗式攻击专注于产生具有扰动的工业物联网输入，这种攻击被命名为“对抗式示例”，以愚弄深度神经网络(DNNs)。这种对抗性的例子可能会误导分类器模型预测不正确的输出，而它们是无法被人眼识别的。为了抵抗这些攻击，提出了集成多样性、PuVAE和对抗性训练等多种防御方法。然而，它们中的大多数并不适合工业物联网应用。这主要是因为:1)大多数防御方法都只防御一种特定类型的攻击;(2)工业物联网应用通常分散在不同的地方，面临各种对抗性攻击。在这种情况下，同一类型的工业物联网设备应配置不同的dnn，以适应不同的环境。当各种新的对抗性攻击出现时，情况变得更糟，因为工业物联网设计人员很难快速找到新的解决方案来防御此类攻击
+大多数现有的对抗式攻击专注于生成具有扰动的IIoT输入（对抗样本），以愚弄DNNs这种对抗样本能误导分类器产生错误预测，同时这些扰动无法被人眼察觉。目前提出了许多防御方法来抵抗这些攻击，例如ensemble diversity[8], PuVAE[9],adversarial training。然而，它们中大多数并不适合工业物联网应用。主要因为:1)大多数防御方法都只防御一种特定类型的攻击;(2)工业物联网应用通常分散在不同的地方，面临各种对抗性攻击。在这种情况下，同一类型的工业物联网设备应配置不同的DNNs，以适应不同的环境。当各种新的对抗性攻击出现时，情况变得更糟，因为工业物联网设计人员很难快速找到新的解决方案来防御此类攻击。
 
+作为一种分布式机器学习方法，联邦学习(FL)[10]能够在工业物联网设备上的大量分散数据上训练高质量的集中化模型。它已经被广泛研究并应用于，解决基于云架构的隐私、所有权和数据位置等基本问题。同时在云架构中，参与设备数量巨大，但互联网连接缓慢或不可靠。基于联邦平均技术[11]，FL允许在不暴露存储在工业物联网设备上的数据的情况下训练DNN。新DNN的权重在云中使用FL合成，用于构建一个全局模型，然后推回不同的工业物联网设备进行预测。然而，到目前为止，没有一种现有的基于fl的方法研究对工业物联网应用的对抗攻击的防御。
+
+由于云架构可以通过将物联网设备的部分计算任务卸载到远程云服务器，从而扩展物联网设备处理能力，云计算和物联网的结合正成为一种流行的范式，使大规模智能物联网应用成为可能。在CPS环境下，工业物联网设备与云连接[12]。然而，无论云服务器的角色是否用于培训或推断，工业物联网设备需要将原始数据发送到云服务器，其中网络延迟和数据隐私问题不容忽视。此外，如果工业物联网应用的设备采用相同类型的DNNs，则对抗性攻击的多样性很容易破坏应用的健壮性。因此，如何为大量相同类型的工业物联网设备生成健壮的DNN，同时又能保护这些设备的隐私，成为一个挑战。受联邦学习概念的启发，本文提出了一种适用于大规模工业物联网应用的有效联邦防御框架FDA。它作出了以下三个主要贡献:
+1）出了一种新的针对工业物联网设备的<font color=blue>对抗训练损失函数</font>，充分考虑了对抗性攻击的多样性。
+2)我们提出了一种有效的联邦对抗学习方案，该方案可以得到强壮的DNNs来抵抗广泛的对抗攻击。
+3)在基于云架构的基础上，提出了一种面向大规模工业物联网应用的新型联邦防御框架。
+
+在两个著名的基准数据集上的实验结果表明，我们提出的方法在工业物联网设备上生成的DNN比目前最先进的方法更能抵抗对抗性攻击。此外，所研究的工业物联网应用规模越大<font color=blue>(是否可以理解为所能接受到的对抗样本信息越全面或者原始信息越多)</font>，生成的DNN的鲁棒性越好。本文的其余部分组织如下。第二部分介绍了基于dnn的物联网设计中对抗攻击防御机制的相关工作。第三节详细介绍了我们的联邦防御框架FDA。第四节给出了实验结果，展示了我们方法的有效性和可扩展性。最后，第五部分对全文进行总结。
+
+#### Related Work
+    相关工作不展开介绍，主要提几点本人感兴趣的：
+    1.生成物理的对抗样本欺骗模型——[15-16]
+    2.介绍了3类防御算法：A-优化目标分类器的梯度<font color=blue>(这类防御没有接触过，可以看看-[8][9][22])</font>B-增加自动编码器C-对抗训练
+
+#### 联邦防御方法
+由于隐私信息泄露，攻击者可以从工业物联网设备获取DNN模型信息进行攻击。在我们的方法中，在工业物联网设备提供的隐私保护机制的帮助下，我们假设模型破解时间比模型更新周期长。在这种情况下，对手总是无法获得工业物联网设备使用的模型的最新版本。然而，攻击者可以根据已获得的隐私数据，使用<font color=blue>传输攻击（transfer attack）</font>来欺骗DNN模型。本文主要研究如何对威胁模型进行再训练，使其能够抵抗由敌手产生的各种类型的对抗实例。以下小节将介绍我们基于云的联邦防御结构，对设备级别的联邦对抗训练损失函数，以及模型更新和合成细节。
+
+！[framwork and workflow of FDA](/img/20211026/1.png)
+
+图1详细描述了FDA的框架及其工作流程，其灵感来自于对抗式训练和联合学习方法。我们方法的架构由两部分组成，即工业物联网设备及其云服务器。除了预测功能外，存在于物联网设备中的DNN还负责抵御对抗样本的DNN更新。最初，所有设备共享相同的DNN。由于它们部署在不同的环境中，因此可能会遇到不同的输入示例和不同类型的攻击。这种不平衡使得联合学习成为聚合不同防御能力的最佳解决方案。
