--- a/_posts/2021-10-28-论文.md
+++ b/_posts/2021-10-28-论文.md
@@ -86,6 +86,7 @@ $$
 
 利用算数平均对每个终端设备的损失函数求平均得到全局模型的损失函数，从而找到最合适的参数$\theta$，满足下式：
 
+
 $$
 \large{\theta{^*}=arg\underset{\theta{}}{min}{\left\{  
 \underset{x\subseteq{D},\widehat{x}\subseteq{D_{L\infty{}}}}{E}\left[\underset{||\widehat{x}-x||_\infty{}\leq{\epsilon{}}}{max}L_{fed}(x,\widehat{x},y|\theta{})\right]+\\
@@ -96,7 +97,14 @@ $$
 
 ##### Federated Defense Model Generation
 
-联合防御方法由两部分组成，即IIoT设备和相应的云服务器。在执行过程中，IIoT设备随机收集一组高可信度的自然实例，并将它们保存在本地内存中。根据云服务器分配的攻击方案，IIoT设备生成对抗样本进行模型再训练。请注意，由于IIoT设备的资源有限(如内存大小、计算能力)，云服务器通常只分配有限数量的攻击方案给IIoT设备。与联合学习类似，我们的联合防御方法的对抗训练过程涉及多个epoch，其中一个epoch可能根据用户指定的批大小涉及多个迭代。在我们的方法中，我们考虑每个迭代为一轮，在一轮内，所有工业物联网设备将从其本地重新培训的模型获得的梯度信息发送到云服务器，然后云服务器将梯度聚合，并将更新后的模型与所有IIoT设备同步。
+联合防御方法由两部分组成，即IIoT设备和相应的云服务器。在执行过程中，IIoT设备随机收集一组高可信度的自然实例，并将它们保存在本地内存中。根据云服务器分配的攻击方案，IIoT设备生成对抗样本进行模型再训练。请注意，由于IIoT设备的资源有限(如内存大小、计算能力)，云服务器通常只分配有限数量的攻击方案给IIoT设备。与联合学习类似，我们的联合防御方法的对抗训练过程涉及多个epoch，其中一个epoch可能根据用户指定的批大小涉及多个迭代。在我们的方法中，我们考虑每个迭代为一轮，在一轮内，所有IIoT设备将从其本地重新培训的模型获得的梯度信息发送到云服务器，然后云服务器将梯度聚合，并将更新后的模型与所有IIoT设备同步。
+
+<div align=center>![Traning](/img/20211028/4.png)
+
+算法1介绍了本地IIoT设备对抗训练的细节。请注意，我们假设索引为K的IIoT设备已连接到服务器，并且其模型与最初的服务器相同。在第2步中，该设备尝试随机收集具有高预测置信度的自然实例。步骤3，基于旧模型和云服务器分配的攻击方案，使用传输的攻击获得原始样本的对抗性示例。注意，如果att的基数大于1，步骤3将为Xnat中的每个示例生成不同类型的对抗样本。由于Xnat中的所有样本都是高度可信地收集的，因此第4步试图找出它们的标签。与步骤4类似，步骤5得到所有对抗样本的预测结果。<font color=darkyellow>步骤6将Xnat和Ynat增加，将它们复制|att|倍，以进行步骤13-14中的损失函数计算。</font>步骤8-20迭代地与云服务器交互，步骤10-18形成一轮梯度聚合和模型更新。第10步将自然性例子和对抗性例子分批进行划分。步骤11-12分别计算出同一批次中自然和对抗性例子的预测标签。步骤13-15使用式(1)中定义的方程，根据批处理中的性质和对抗性示例计算总体损失函数。步骤16计算梯度信息，步骤17将其发送到云服务器。步骤18使用云服务器发送的聚合梯度信息更新本地模型。注意，sync recv是一个等待云服务器回复的阻塞函数.
+
+![Cloud](/img/20211028/5.png)
+
 
 
 
