--- a/_posts/2021-10-28-论文.md
+++ b/_posts/2021-10-28-论文.md
@@ -16,7 +16,7 @@ tags: Papers
 
 #### Abstract
 
-在AI与IoT技术普及下，对抗攻击激增，用于欺骗IIoT应用的深度神经网络。由于偏见的训练数据以及脆弱的潜层（underlying models）模型，对输入的微弱修改足以带来破坏性的结果。虽然，已有的方法在防御恶意攻击上很有前景，但他们大多数只能应对有限的一直攻击类型，这对大规模IIoT的发展是个巨大挑战。为了解决这个问题，我们提出了一个有效的联邦防御方法（FDA3），它能够聚合不同来源对抗样本提供的防御信息。受到联邦学习的启发，我们提出的基于云端的架构能够在工业互联网设备间对多种攻击，实现防御共享。实验结构表明，利用我们方法生成的DNNs，相较于已存在的特定攻击的对抗训练<font color=red>（FGSM IBM）</font>，不仅能够抵御更多恶意攻击，而且能够防御IIoT上的新攻击。
+在AI与IoT技术普及下，对抗攻击激增，用于欺骗IIoT应用的深度神经网络。由于偏见的训练数据以及脆弱的潜层（underlying models）模型，对输入的微弱修改足以带来破坏性的结果。虽然，已有的方法在防御恶意攻击上很有前景，但他们大多数只能应对有限的一直攻击类型，这对大规模IIoT的发展是个巨大挑战。为了解决这个问题，我们提出了一个有效的联邦防御方法（FDA3），它能够聚合不同来源对抗样本提供的防御信息。受到联邦学习的启发，我们提出的基于云端的架构能够在工业互联网设备间对多种攻击，实现防御共享。实验结构表明，利用我们方法生成的DNNs，相较于已存在的特定攻击的对抗训练<font color=red>（FGSM、BIM、JSMA、CW2和DeepFool）</font>，不仅能够抵御更多恶意攻击，而且能够防御IIoT上的新攻击。
 
 <font color=red>文章中为什么把对抗样本的存在归因于偏见的训练数据以及脆弱的潜层</font>
 
@@ -99,12 +99,42 @@ $$
 
 联合防御方法由两部分组成，即IIoT设备和相应的云服务器。在执行过程中，IIoT设备随机收集一组高可信度的自然实例，并将它们保存在本地内存中。根据云服务器分配的攻击方案，IIoT设备生成对抗样本进行模型再训练。请注意，由于IIoT设备的资源有限(如内存大小、计算能力)，云服务器通常只分配有限数量的攻击方案给IIoT设备。与联合学习类似，我们的联合防御方法的对抗训练过程涉及多个epoch，其中一个epoch可能根据用户指定的批大小涉及多个迭代。在我们的方法中，我们考虑每个迭代为一轮，在一轮内，所有IIoT设备将从其本地重新培训的模型获得的梯度信息发送到云服务器，然后云服务器将梯度聚合，并将更新后的模型与所有IIoT设备同步。
 
-<div align=center>![Traning](/img/20211028/4.png)
+![Traning](/img/20211028/4.png)
 
 算法1介绍了本地IIoT设备对抗训练的细节。请注意，我们假设索引为K的IIoT设备已连接到服务器，并且其模型与最初的服务器相同。在第2步中，该设备尝试随机收集具有高预测置信度的自然实例。步骤3，基于旧模型和云服务器分配的攻击方案，使用传输的攻击获得原始样本的对抗性示例。注意，如果att的基数大于1，步骤3将为Xnat中的每个示例生成不同类型的对抗样本。由于Xnat中的所有样本都是高度可信地收集的，因此第4步试图找出它们的标签。与步骤4类似，步骤5得到所有对抗样本的预测结果。<font color=darkyellow>步骤6将Xnat和Ynat增加，将它们复制|att|倍，以进行步骤13-14中的损失函数计算。</font>步骤8-20迭代地与云服务器交互，步骤10-18形成一轮梯度聚合和模型更新。第10步将自然性例子和对抗性例子分批进行划分。步骤11-12分别计算出同一批次中自然和对抗性例子的预测标签。步骤13-15使用式(1)中定义的方程，根据批处理中的性质和对抗性示例计算总体损失函数。步骤16计算梯度信息，步骤17将其发送到云服务器。步骤18使用云服务器发送的聚合梯度信息更新本地模型。注意，sync recv是一个等待云服务器回复的阻塞函数.
+
+<font color=red>步骤6? 为什么要复制对抗样本，重复训练吗？
+解答：不是直接的复制过程，而是同一张样本在同种对抗样本下生成不同对抗样本。
+</font>
 
 ![Cloud](/img/20211028/5.png)
 
 
+#### Experiments
 
+为了评估我们的方法的有效性，我们在一个基于云的架构上实现了我们的FDA方法，该架构包括一个云服务器和一组连接的IIoT设备。由于我们专注于分类准确性，云服务器和IIoT设备的行为都在一台使用Intel i7-9700k CPU, 16GB内存，NVIDA GeForce GTX1080Ti GPU, Ubuntu操作系统的工作站上进行模拟。我们采用Tensorflow (version 1.12.0)和Keras (version 2.2.4)在我们的框架中构建所有DNN模型。为了验证我们的方法，我们进行了两个案例研究，分别使用LeNet[27]用于MNIST[28]数据集，使用ResNet[29]用于CIFAR10[30]数据集。初始LeNet模型使用来自MNIST数据集的60000个训练示例进行训练，初始ResNet模型使用来自CIFAR10数据集的50000个训练示例进行训练。注意，MNIST和CIFAR10数据集分别有一个包含10000个示例的测试集。我们把它们分成两部分，其中5000个例子用于再训练，剩下的5000个例子用于测试。
 
+##### Performance Comparison
+
+在第一个实验中，我们考虑了一个IIoT应用程序，该应用程序有10个设备连接到同一个云服务器，用于联邦防御。由于大多数IIoT设备内存有限，我们假设IIoT设备上的DNN模型只能保留100个自然实例用于对抗性训练。我们在实验中考虑了五种众所周知的攻击类型，即FGSM[17]、BIM[15]、JSMA[18]、CW2[19]和DeepFool[20]，其中每种类型都用于攻击10个IIoT设备中的2个。为了使对抗训练成为可能，对于每个设备，我们使用分配的攻击方案为100个自然例子分别生成100个对抗例子。注意，这里所有的对抗例子都是由传输攻击生成的，假设初始模型可以获得，而中间的再训练模型不能被恶意的对手访问。与[17]类似，我们将超参数α设为0.5，这表明正常和对抗损失对总损失的贡献相等。
+
+<font  color =red>**MNTST**</font>比较联邦防御与其他对抗训练的差异
+
+![Cloud](/img/20211028/6.png)
+
+<font  color =red>**CIFAR10**</font>比较联邦防御与其他对抗训练的差异
+
+![Cloud](/img/20211028/7.png)
+
+<font  color =red>New attack SIMBA</font>
+
+![Cloud](/img/20211028/8.png)
+
+##### Scalability Analysis
+
+上个实验只研究了一个仅有10台设备的IIoT应用程序。然而，一个典型的IIoT应用程序可能涉及数十个或数百个设备。因此，为了验证我们的方法是否可以应用于大规模IIoT应用，我们进行了第二次实验，以检验我们的方法的可扩展性。
+上图显示了随着MNIST数据集上IIoT设备数量的增加，预测精度的趋势。在这个实验中，我们使用FDA来生成IIoT设备的模型。与第一个实验中使用的方案类似，我们考虑了五种攻击类型(即FGSM、BIM、JSMA、CW2、DeepFool)来生成对抗示例。我们假设有五分之一的设备受到了特定类型的攻击。例如，如果一个IIoT应用程序涉及10个设备，那么调查的五种攻击类型中每一种都将有2个设备。我们调查了7种类型的测试样本，其中Nature表示一个包含5000个自然示例的测试集，而其他6个包含5000个示例的测试集都使用攻击类型进行标记。
+
+![Cloud](/img/20211028/9.png)
+
+ending：感觉有点荒谬，因为如果同步结束后，所以模型相同了，这就是一个数据的大规模整合。
