--- a/_posts/2021-10-28-论文.md
+++ b/_posts/2021-10-28-论文.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Paper-FDA Federated Defense Against Adversarial Attacks for Cloud-Based IIoT Applications
+description: "经典对抗训练在联邦上的沿用"
 subtitle: ""
 data: 2021-10-28
 author: Fat-Pman
