--- a/_posts/2021-10-28-论文.md
+++ b/_posts/2021-10-28-论文.md
@@ -66,35 +66,22 @@ tags: Papers
 
 <img src="http://chart.googleapis.com/chart?cht=tx&chl= \large{L(x,\widehat{x},y|\theta{})=(1-\alpha{})L_{normal}+{\alpha{}} L_{adv}(\widehat{x},y|\theta{})}" style="border:none;">
 
-    \large{L(x,\widehat{x},y|\theta{})=(1-\alpha{})L_{normal}+{\alpha{}} L_{adv}(\widehat{x},y|\theta{})}
-
-
  {\large}L_{normal} (x,y|\theta) 表示正常损失函数，其中x，y表示自然(正态)样例和模型参数为 \theta 时的分类标签。α值越高，说明对抗性损失函数的权重越大，对整体损失函数的贡献越大。
 
 对于不同的对抗攻击，存在不同的方法来获得最小 {\large}L(x,\widehat{x},y|\theta) 的最优 \theta 。以 L_{\infty} 范数的FGSM攻击为例，可以利用下面的公式计算最有的 \theta :
 
-  
-\large{\theta{^*}=arg\underset{\theta{}}min \underset{x\subseteq{D}}E \left[\underset{||\widehat{x}-x||_\infty{\leq{\epsilon{}}}}{max} L(x,\widehat{x},y|\theta{}) \right]}
-  
+<img src="http://chart.googleapis.com/chart?cht=tx&chl= \large{\theta{^*}=arg\underset{\theta{}}min \underset{x\subseteq{D}}E \left[\underset{||\widehat{x}-x||_\infty{\leq{\epsilon{}}}}{max} L(x,\widehat{x},y|\theta{}) \right]}" style="border:none;">
+
 
 ![L_norm](/img/20211028/3.png)
 
 为了将这个损失函数拓展到更多的范数类型，我们将损失函数扩展如下：
 
-  
-\large{L_{fed}(x,\widehat{x},y|\theta{})=\frac{1}{N}{\sum{}}_{k=1} ^N L \left(x^k,\widehat{x}^k,y^k,\theta{}\right)}
-  
+<img src="http://chart.googleapis.com/chart?cht=tx&chl= \large{L_{fed}(x,\widehat{x},y|\theta{})=\frac{1}{N}{\sum{}}_{k=1} ^N L \left(x^k,\widehat{x}^k,y^k,\theta{}\right)}" style="border:none;">
 
 利用算数平均对每个终端设备的损失函数求平均得到全局模型的损失函数，从而找到最合适的参数 \theta ，满足下式：
 
-
-  
-\large{\theta{^*}=arg\underset{\theta{}}{min}{\left\{  
-\underset{x\subseteq{D},\widehat{x}\subseteq{D_{L\infty{}}}}{E}\left[\underset{||\widehat{x}-x||_\infty{}\leq{\epsilon{}}}{max}L_{fed}(x,\widehat{x},y|\theta{})\right]+\\
-\underset{x\subseteq{D},\widehat{x}\subseteq{D_{L0}}}{E}\left[\underset{||\widehat{x}-x||_0\leq{\sigma{}}}{max}L_{fed}(x,\widehat{x},y|\theta{})\right]+\\
-\underset{x\subseteq{D},\widehat{x}\subseteq{D_{L2}}}{E}\left[\underset{||\widehat{x}-x||_2\leq{\delta{}}}{max}L_{fed}(x,\widehat{x},y|\theta{})\right]+
-\right\}}}
-  
+<img src="http://chart.googleapis.com/chart?cht=tx&chl= \large{\theta{^*}=arg\underset{\theta{}}{min}{\left\{\underset{x\subseteq{D},\widehat{x}\subseteq{D_{L\infty{}}}}{E}\left[\underset{||\widehat{x}-x||_\infty{}\leq{\epsilon{}}}{max}L_{fed}(x,\widehat{x},y|\theta{})\right]+\underset{x\subseteq{D},\widehat{x}\subseteq{D_{L0}}}{E}\left[\underset{||\widehat{x}-x||_0\leq{\sigma{}}}{max}L_{fed}(x,\widehat{x},y|\theta{})\right]+\\\underset{x\subseteq{D},\widehat{x}\subseteq{D_{L2}}}{E}\left[\underset{||\widehat{x}-x||_2\leq{\delta{}}}{max}L_{fed}(x,\widehat{x},y|\theta{})\right]+\right\}}}" style="border:none;">
 
 ##### Federated Defense Model Generation
 
