--- a/_posts/2021-10-28-FDA论文.md
+++ b/_posts/2021-10-28-FDA论文.md
@@ -14,6 +14,8 @@ tags: Papers
 
 （这里的对抗攻击都有哪儿些，还是原来的中毒攻击？ -基于数据 Or -基于模型）
 
+IEEE Transactions on Industrial Informatics, 2020
+
 #### Abstract
 
 在AI与IoT技术普及下，对抗攻击激增，用于欺骗IIoT应用的深度神经网络。由于偏见的训练数据以及脆弱的潜层（underlying models）模型，对输入的微弱修改足以带来破坏性的结果。虽然，已有的方法在防御恶意攻击上很有前景，但他们大多数只能应对有限的一直攻击类型，这对大规模IIoT的发展是个巨大挑战。为了解决这个问题，我们提出了一个有效的联邦防御方法（FDA3），它能够聚合不同来源对抗样本提供的防御信息。受到联邦学习的启发，我们提出的基于云端的架构能够在工业互联网设备间对多种攻击，实现防御共享。实验结构表明，利用我们方法生成的DNNs，相较于已存在的特定攻击的对抗训练<font color=red>（FGSM、BIM、JSMA、CW2和DeepFool）</font>，不仅能够抵御更多恶意攻击，而且能够防御IIoT上的新攻击。
