--- a/_posts/2022-03-22 贝叶斯网络.md
+++ b/_posts/2022-03-22 贝叶斯网络.md
@@ -5,23 +5,18 @@ description: ""
 subtitle: ""
 data: 2021-12-22
 author: Fat-Pman 
-header-img: img/post-bg/25.jpg
+header-img: img/post-bg/24.jpg
 catalog: true
 tags: python
 ---
 
-#### 获取指定文件夹下所有文件名
+#### 机器学习-贝叶斯网络
 
-##### os.walk()
+    全概率公式 - 应用概率可加性
+    联合概率密度
 
-```python
-    os.walk(path)  #以列表返回各个文件下的文件
-    #一般使用
-    for i, (path, dirfile, file) in enumerate(os.walk(source_path)):
-```
-
-##### os.listdir()
-
-```python
-    os.listdir()  #以列表返回下级文件
-```
+    贝叶斯公式 : 条件概率 P(A|B) = P(AB)/P(B)
+    贝叶斯定理
+    贝叶斯判定准则：最小化总体风险
+    
+    
