--- a/_posts/照片下载测试.md
+++ b/_posts/照片下载测试.md
@@ -10,6 +10,11 @@ catalog: true
 tags: python
 ---
 
-#### Foolbox
+#### 图片下载测试
 
-##### 
+!(./img/20211120/7.png)
+<li><a href="https://github.com/00zwp/00zwp.github.io/blob/master/img/20211028/1.png">GitHub</a></li>
+
+
+
+    
