--- a/_posts/2021-11-08-24点小程序的总结 copy.md
+++ b/_posts/2021-11-08-24点小程序的总结 copy.md
@@ -7,7 +7,7 @@ data: 2021-11-8
 author: Fat-Pman && 205
 header-img: img/post-bg/4.jpg
 catalog: true
-tags: Application, ALgorithm, JAVA
+tags: Application ALgorithm JAVA
 ---
 
 ### Application of 24 Points
