--- a/_posts/2021-11-10-终端显示中文字符 copy.md
+++ b/_posts/2021-11-10-终端显示中文字符 copy.md
@@ -7,7 +7,7 @@ data: 2021-11-9
 author: Fat-Pman 
 header-img: img/post-bg/6.jpg
 catalog: true
-tags: ssh, Linux
+tags: ssh-Linux
 ---
 
 ### ssh终端显示中文字符
