--- a/_posts/2021-12-3-论文DLG.md
+++ b/_posts/2021-12-3-论文DLG.md
@@ -7,7 +7,7 @@ data: 2021-12-3
 author: Fat-Pman 
 header-img: img/post-bg/15.jpg
 catalog: true
-tags: Paper
+tags: Papers
 ---
 
 #### Deep Leakage from Gradients
